Big doclib actions refactor to support REST API standards and general tidy up. Switched debugging back on (but removed alert). Location.hash workaround fixes for Firefox 2. Panel scrollbar issue fix for Firefox 2 (Mac only). Text insertion character fix for Firefox 2 - awaiting webframework htmlids to be updated. Started simple-dialog to give people a somewhat easier dialog framework.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@9392 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/documentlibrary/documentlist.css
+++ b/root/projects/slingshot/source/web/components/documentlibrary/documentlist.css
@@ -88,7 +88,7 @@
 .doclist .documents.yui-dt td
 {
    border-right: medium none;
-   border-bottom: 1px solid #f0f0f0;
+   border-top: 1px solid #f0f0f0;
    vertical-align: top;
 }
 
@@ -165,8 +165,7 @@
 
 /* Actions */
 
-.doclist .onDeleteDocument a,
-.doclist .onDeleteFolder a
+.doclist .onDeleteAsset a
 {
    background: url(images/delete.gif) no-repeat;
    padding-left: 16px;
